--- a/tp/1/index.html
+++ b/tp/1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>TP liste chainée</title>
 </head>
-<body onclick="console.log(Pdebut)">
+<body>
 <div>
     <button type="button" onclick="afficherListe()">Liste</button>
     <button type="button" onclick="ajout(prompt('Nom'))">Ajout</button>
