--- a/partiel/1/exercice_3.html
+++ b/partiel/1/exercice_3.html
@@ -45,11 +45,7 @@
 
         for (let i = 0; i < document.getElementsByName('montant').length; i++) {
             /*on sélectionne les input un par un pour les actualiser*/
-            if(this.value != parseFloat(this.value))
-                document.getElementById('montant-'+i).value = 'ERREUR';
-            else if(document.getElementById('montant-'+i) !== this){
-                document.getElementById('montant-'+i).value = (this.value*(devises[i].cours/devises[choisie].cours)).toFixed(4);
-            }
+            document.getElementById('montant-'+i).value = (this.value != parseFloat(this.value)) ? 'ERREUR' : (this.value*(devises[i].cours/devises[choisie].cours)).toFixed(4);
         }
     };
 
