--- a/tp/promesses/partie3.html
+++ b/tp/promesses/partie3.html
@@ -36,26 +36,30 @@
             const Marques = JSON.parse((await $get('JS/Marque.js',null)).responseText);
 
             let refEstValide = false;
-            Achats.forEach(achat => {
-                if(achat.ref_achat == document.querySelector('#refAchat').value){
-                    refEstValide = true;
-                    setHTML('.date_achat', achat.date_achat);
-                    setHTML('.montant_achat',achat.montant_achat);
-                    setHTML('.ref_voiture',achat.ref_voiture);
-                }
-            });
-            if(!refEstValide) setHTML('.date_achat', 'Aucun résultat');
+            let res_achat = Achats
+                .filter(achat => {
+                    if(achat.ref_achat == document.querySelector('#refAchat').value){
+                        refEstValide = true;
+                        return true;
+                    }
+                });
+            if(!refEstValide){
+                setHTML('.date_achat', 'Aucun résultat');
+                return;
+            } else {
+                setHTML('.date_achat', res_achat[0].date_achat);
+                setHTML('.montant_achat',res_achat[0].montant_achat);
+                setHTML('.ref_voiture',res_achat[0].ref_voiture);
+            }
 
-            Voitures.forEach(voiture => {
-                if(voiture.ref_voiture == document.querySelector('.ref_voiture').innerHTML){
-                    setHTML('.nom_modele',voiture.nom_modele);
-                    setHTML('.code_marque',voiture.code_marque);
-                }
-            });
+            let res_voiture = Voitures
+                .filter(voiture => voiture.ref_voiture == document.querySelector('.ref_voiture').innerHTML );
+            setHTML('.nom_modele',res_voiture[0].nom_modele);
+            setHTML('.code_marque',res_voiture[0].code_marque);
 
-            Marques.forEach(marque => {
-                if(marque.code_marque == document.querySelector('.code_marque').innerHTML) setHTML('.nom_marque',marque.nom_marque);
-            });
+            let res_marque = Marques
+                .filter(marque => marque.code_marque == document.querySelector('.code_marque').innerHTML );
+            setHTML('.nom_marque',res_marque[0].nom_marque);
 
         }catch(e){ cl('Erreur : '+e) }
     }
