--- a/tp/morpion/index.html
+++ b/tp/morpion/index.html
@@ -7,9 +7,9 @@
     <title>Javascript - Tp Morpion</title>
 </head>
 <body>
-<canvas id="morpionZone" width="512" height="512"></canvas>
+<canvas id="morpionZone"></canvas>
 </body>
-<script src="morpion.js"></script>
+<script src="morpion.js" type="module"></script>
 <style>
 </style>
 </html>
